School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/mult_Int_Int.deca
//Multiplication d'un entier avec un entier
//
{
    int a = 2;
    int b = 2;
    int c = a*b;
}