School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_comparaisons/comp_StringInt.deca
//Comparaison entre '1' et 1
{
    boolean un = "1" == 1;
}